--- a/forum-service-provider/pom.xml
+++ b/forum-service-provider/pom.xml
@@ -122,6 +122,11 @@
                 <groupId>redis.clients</groupId>
                 <artifactId>jedis</artifactId>
             </dependency>
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>2.6</version>
+            </dependency>
     </dependencies>
 
     <build>
