--- a/forum-center/src/main/webapp/WEB-INF/web.xml
+++ b/forum-center/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,11 @@
 
 
 
+  <listener>
+    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+  </listener>
+
+
   <!-- 前端控制器（加载classpath:springmvc.xml 服务器启动创建servlet） -->
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
