2020/1/9  前台部分基本完成

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <module>forum-center</module>
         <module>forum-admin</module>
         <module>forum-service-provider</module>
-        <module>forum-search</module>
         <module>forum-search-service-provider</module>
+        <module>forum-schedule-task</module>
     </modules>
 
     <packaging>pom</packaging>
