--- a/forum-admin/src/main/webapp/WEB-INF/web.xml
+++ b/forum-admin/src/main/webapp/WEB-INF/web.xml
@@ -6,12 +6,19 @@
          version="3.1">
 
 
-
   <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
 
 
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
   <!-- 前端控制器（加载classpath:springmvc.xml 服务器启动创建servlet） -->
   <servlet>
     <servlet-name>dispatcherServlet</servlet-name>
@@ -29,6 +36,8 @@
     <url-pattern>*.do</url-pattern>
   </servlet-mapping>
 
+
+
   <!-- 解决中文乱码过滤器 -->
   <filter>
     <filter-name>characterEncodingFilter</filter-name>
@@ -42,5 +51,6 @@
     <filter-name>characterEncodingFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
 
 </web-app>
